--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="description">Description</string>
     <string name="TargetPoints">TargetPoints</string>
     <string name="addTask">Add</string>
+    <string name="measure_unit">Measure Unit</string>
 </resources>
