--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="measure_unit">Measure Unit</string>
     <string name="tasks">Tasks</string>
     <string name="add_task">Add Task</string>
+    <string name="Save">Сохранить</string>
+    <string name="points">points</string>
 </resources>
