--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="add_task">Add Task</string>
     <string name="Save">Сохранить</string>
     <string name="points">points</string>
+    <string name="graph">Graph</string>
 </resources>
