--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="points">points</string>
     <string name="graph">Graph</string>
     <string name="no_data">No Data</string>
+    <string name="profile">Profile</string>
 </resources>
