--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="edit">Редактировать</string>
     <string name="entry_added">Запись добавлена</string>
     <string name="fill_in_the_fields">Заполните поля</string>
+    <string name="achievement">Достижения</string>
 </resources>
