Добавил статистику о закрытых / открытых очивок в профиль

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="entry_added">Запись добавлена</string>
     <string name="fill_in_the_fields">Заполните поля</string>
     <string name="achievement">Достижения</string>
+    <string name="unlocked_achievements">Разблокированные ачивки</string>
 </resources>
